--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <body>
     <div class="cv">
         <header>
-            <h1>Your Name</h1>
-            <p>Email: your@email.com | Phone: (123) 456-7890 | LinkedIn: linkedin.com/in/yourname</p>
+            <div class="header-content">
+                <img src="\img\MainPhoto.jpg" alt="Your Photo">
+                <h1>Your Name</h1>
+                <p>Email: your@email.com | Phone: (123) 456-7890 | LinkedIn: linkedin.com/in/yourname</p>
+            </div>
         </header>
         <section id="summary">
             <h2>Professional Summary</h2>
