--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="cv">
         <header>
             <div class="header-content">
-                <img src="\img\MainPhoto.jpg" alt="Your Photo">
+                <img src="https://media.licdn.com/dms/image/D4E03AQF9VbqdP2bFmQ/profile-displayphoto-shrink_800_800/0/1688728495423?e=1703116800&v=beta&t=sH7pEZq4I8iu-hJ4ip156Cz5DJGFUOsYilIVzo7zwrQ" alt="Your Photo">
                 <h1>Your Name</h1>
                 <p>Email: your@email.com | Phone: (123) 456-7890 | LinkedIn: linkedin.com/in/yourname</p>
             </div>
