--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Your Name - CV</title>
+    <title>YassineLamnah</title>
 </head>
 <body>
     <div class="cv">
         <header>
             <div class="header-content">
                 <img src="https://media.licdn.com/dms/image/D4E03AQF9VbqdP2bFmQ/profile-displayphoto-shrink_800_800/0/1688728495423?e=1703116800&v=beta&t=sH7pEZq4I8iu-hJ4ip156Cz5DJGFUOsYilIVzo7zwrQ" alt="Your Photo">
-                <h1>Your Name</h1>
-                <p>Email: your@email.com | Phone: (123) 456-7890 | LinkedIn: linkedin.com/in/yourname</p>
+                <h1>Yassine Lamnah</h1>
+                <p>Email: pro.yassine.lamnah@gmail.com | Phone: (+212)621966264 | LinkedIn: https://www.linkedin.com/in/lamnah-yassine/</p>
             </div>
         </header>
         <section id="summary">
