--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css" integrity="sha256-4w9DunooKSr3MFXHXWyFER38WmPdm361bQS/2KUWZbU=" crossorigin="anonymous">
     <title>YassineLamnah</title>
 </head>
 <body>
@@ -12,7 +13,25 @@
             <div class="header-content">
                 <img src="https://media.licdn.com/dms/image/D4E03AQF9VbqdP2bFmQ/profile-displayphoto-shrink_800_800/0/1688728495423?e=1703116800&v=beta&t=sH7pEZq4I8iu-hJ4ip156Cz5DJGFUOsYilIVzo7zwrQ" alt="Your Photo">
                 <h1>Yassine Lamnah</h1>
-                <p>Email: pro.yassine.lamnah@gmail.com | Phone: (+212)621966264 | LinkedIn: https://www.linkedin.com/in/lamnah-yassine/</p>
+                <p>Email:  | Phone: (+212)621966264 | LinkedIn: 
+
+
+                    <li>
+                        <a href="mailto:pro.yassine.lamnah@gmail.com" target="_blank" rel="noopener">
+                          <i class="fab fa-google big-icon"></i>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://www.linkedin.com/in/lamnah-yassine/" target="_blank" rel="noopener">
+                          <i class="fab fa-linkedin-in big-icon"></i>
+                        </a>
+                    </li>
+
+
+
+
+                </p>
             </div>
         </header>
         <section id="summary">
