--- a/index.html
+++ b/index.html
@@ -4,36 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css" integrity="sha256-4w9DunooKSr3MFXHXWyFER38WmPdm361bQS/2KUWZbU=" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <title>YassineLamnah</title>
 </head>
 <body>
     <div class="cv">
+
+
         <header>
             <div class="header-content">
                 <img src="https://media.licdn.com/dms/image/D4E03AQF9VbqdP2bFmQ/profile-displayphoto-shrink_800_800/0/1688728495423?e=1703116800&v=beta&t=sH7pEZq4I8iu-hJ4ip156Cz5DJGFUOsYilIVzo7zwrQ" alt="Your Photo">
                 <h1>Yassine Lamnah</h1>
-                <p>Email:  | Phone: (+212)621966264 | LinkedIn: 
-
-
-                    <li>
-                        <a href="mailto:pro.yassine.lamnah@gmail.com" target="_blank" rel="noopener">
-                          <i class="fab fa-google big-icon"></i>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="https://www.linkedin.com/in/lamnah-yassine/" target="_blank" rel="noopener">
-                          <i class="fab fa-linkedin-in big-icon"></i>
-                        </a>
-                    </li>
-
-
-
-
+                <p> 
+                    <a href="https://www.linkedin.com/in/lamnah-yassine/" target="_blank" rel="noopener">
+                        <i class="fab fa-linkedin-in fa-1x"></i>
+                    </a>
+                    ,
+                    <a href="mailto:pro.yassine.lamnah@gmail.com" target="_blank" rel="noopener">
+                        <i class="fab fa-google fa-1x"></i>
+                    </a>
+                    ,
+                    <a >
+                        <i class="fas fa-phone fa-1x"></i>
+                    </a>
+                    &
+                    <a href="" target="_blank" rel="noopener">
+                        <i class="fab fa-whatsapp fa-1x" aria-hidden="true"></i>
+                    </a>
+                    (+212)621966264 
                 </p>
             </div>
         </header>
+
+
         <section id="summary">
             <h2>Professional Summary</h2>
             <p>Experienced web developer with a strong background in HTML, CSS, and JavaScript. Proven track record of designing and implementing responsive websites and web applications. Passionate about clean code, user-friendly design, and solving complex problems. Seeking opportunities to work on exciting projects and deliver exceptional results.</p>
