--- a/projects/index.html
+++ b/projects/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Add any necessary metadata and stylesheets -->
-    <title>Summary - Your Name</title>
+    <title>Projects - Your Name</title>
 </head>
 <body>
-    <!-- Content for the Summary page -->
-    <h1>Summary</h1>
-    <!-- Add your summary content here -->
+    <!-- Content for the Projects page -->
+    <h1>Projects</h1>
+    <!-- Add your projects content here -->
 </body>
 </html>
