--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             
             <nav class="navbar">
                 <ul>
-                    <li><a href="./about/index.html">Summary</a></li>
-                    <li><a href="./projects/index.html">projects</a></li>
+                    <li><a href="./about/index.html">About</a></li>
+                    <li><a href="./projects/index.html">Projects</a></li>
                 </ul>
             </nav>
 
